# vocai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.vocai.yml  wrangler.toml
infra/: Caddyfile.vocai  deploy-vocai.sh  docker-compose.vocai-service.yml
public/: dashboard.html  flashcards-new.html  flashcards.html  index.html  islands-new.html  islands.html  review.html
public/assets/css/: vocai.css
public/assets/js/: vocai.js
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs  nvidia.rs  pollinations.rs  session.rs  srs.rs
server/src/handlers/: auth.rs  flashcards.rs  islands.rs  mod.rs  review.rs
